small css updates to accomodate autofill

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,17 +1,3 @@
-
-
-<!--will this be taken care of by the main.handlebars?
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <script src="https://code.jquery.com/jquery.js"></script>
-
-    <title>venUser</title>
-</head>
-
-<body>--> 
-
     <form id="venueForm" method="post">
         <p>Fill out the information below to write review or tip =)</p>
 
@@ -24,7 +10,7 @@
         <br>
 
         <label for="Authors Name">Author's Name:</label>
-        <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
+        <input type="text" name="Authors Name" id="Author_Name_fm">
         <br>
         <br>
 
@@ -38,7 +24,6 @@
         <label for="content">Content:</label>
         <br>
         <textarea class="form-control" rows="10" cols="30" id="content_fm">
-    write content in here
     </textarea>
         <br>
         <br>
