--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,6 @@
 @-ms-viewport{
     width: device-width;
   }
-
  
  body  { 
      background-image: url("images/venUserBackground.png");
@@ -23,15 +22,10 @@
 
  }
 
- 
- 
-    
-
  #mainPageHeaderFont {
     color: white;
     font-size: 9.375rem;
-    font-family: 'Permanent Marker', cursive; 
-    
+    font-family: 'Permanent Marker', cursive;  
  }
 
  #mainPageHeader {
@@ -39,17 +33,13 @@
     font-size: 9.375rem;
     font-family: 'Permanent Marker', cursive; 
     margin-top: 20px;
-    
  }
 
  #resultTable  {
-
     width: 100%;
     height: 100%;
     font-family: 'Amatic SC', cursive;
     font-style: bold;
-    /* margin-left: 230px; */
-
  }
 
  #selectedPageHeader  {
@@ -60,26 +50,20 @@
  }
   
 th {
-
     font-size: 2rem;
-
-
  }
 
  .card-title  {
      font-size: 4.5rem;
      text-align: center;
-
  }
 
  #searchBar  {
     height: 200px;
- 
 }
 
 #newSearchBar  {
     height:200px;
-
 }
 
 #newSearchTitle  {
@@ -87,15 +71,12 @@ th {
      text-align: center;
 }
 
-
-
 label  {
     font-family: 'Amatic SC', cursive;
     font-style: bold;
     font-size: 2.5rem;
-
-
 }
+
  #searchSubmit { 
     width:200px;
     height: 55px; 
@@ -107,7 +88,7 @@ label  {
  }
 
  #newSearchSubmit { 
-    width:200px;
+    width:200px !important;
     height: 55px; 
     margin-left: 15px;  
     font-family: 'Amatic SC', cursive;
@@ -123,9 +104,7 @@ label  {
  }
 
 
-
  h1, h2, h3, h4, h5 {
-
     font-family: 'Amatic SC', cursive;
      font-style: bolder; 
     
@@ -182,8 +161,7 @@ label  {
     #mainPageHeaderFont {
         color: white;
         font-size: 3rem;
-        font-family: 'Permanent Marker', cursive; 
-        
+        font-family: 'Permanent Marker', cursive;   
      }
     
      .card-title {
@@ -226,43 +204,34 @@ label  {
          height: 240%;
          width: 100%;
      }
-     #venueForm  {
 
+     #venueForm  {
         font-size: 1.75rem;
         font-family: 'Amatic SC', cursive;
         font-style: bolder; 
      }   
 
-
-
-
- 
-
-     
      label  {
         font-family: 'Amatic SC', cursive;
         font-style: bold;
         font-size: 1.75rem;
     }
 
-
     #searchSubmit {
         margin-left: 15%;
         margin-top: 5%;
-
     }
+
     #newSearchSubmit {
         margin-left: 15%;
         margin-top: 5%;
-
     }
-    #resultTable  {
 
+    #resultTable  {
         width: 90%;
         height: 100%;
     } 
     
-  
 }
 
  .tab-content {
