--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -8,335 +8,133 @@
     </div>
 </div>
 
-    {{!-- <div class="d-flex justify-content-center text-black" id="newSearchBar">
-        <div class="card" id="mainCard">
-            <div class="card-body">
-    
-                <form class="form-inline justify-content-center" autocomplete="off" action="/venuelist" method="post">
-                    <div class="autocomplete form-inline" style="width:300px;">
-                        <label for="city">City:</label>
-                        <input type="search" class="form-control" name="city" id="city">
-                    </div>
-                    <div class="autocomplete form-inline" style="width:300px;">
-                        <label for="state">State:</label>
-                        <input type="search" class="form-control" name="state" id="state">
-                    </div>
-                    <label for="venue">Venue:</label>
-                    <input type="search" class="form-control" name="venue" id="venue">
-                    <button type="submit" class="btn btn-secondary btn-lg" id="newSearchBar" type="submit">
-                        <strong>SUBMIT SEARCH</strong>
-                    </button>
-                </form>
-    
-            </div>
-        </div>
-    </div>
-    --}}
-<div class ="container">
+<div class="container">
     <div class="d-flex justify-content-center text-black" id="newSearchBar">
         <div class="card" id="mainCard">
             <div class="card-body center">
-                <form class="form-inline justify-content-center"  autocomplete="off" action="/venuelist" method="post">
-                    <h3 id="newSearchTitle">
-                        <strong>Search New Venue</strong>
-                    </h3>
-                    <div class="autocomplete form-inline" style="width:300px;">
-                    <label for="city">City:</label>
-                    <input type="search"  style ="font-size: 14px;" class="form-control" name="city" id="city">
+                <form class="form-inline justify-content-center" autocomplete="off" action="/venuelist" method="post">
+                    <div class="autocomplete form-inline">
+                        <label for="city">City:</label>
+                        <input type="search" style="font-size: 14px;" class="form-control" name="city" id="city">
                     </div>
-                    <div class="autocomplete form-inline newCity" style="width:300px;">
-                    <label for="state">State:</label>
-                    <input type="search" style ="font-size: 14px;"class="form-control newState" name="state" id="state">
+                    <div class="autocomplete form-inline newCity">
+                        <label for="state">State:</label>
+                        <input type="search" style="font-size: 14px;" class="form-control newState" name="state" id="state">
                     </div>
-                
                     <label for="venue">Venue:</label>
                     <input type="search" class="form-control" name="venue" id="newVenue">
                     <button type="submit" class="btn btn-secondary btn-lg" id="newSearchSubmit" type="submit">
                         <strong>SUBMIT</strong>
                     </button>
-                   
                 </form>
             </div>
         </div>
     </div>
 
-</div>
-<!-- SELECTED VENUE DISPLAY -->
-<div class="container" id="venueInfoArea">
-    <div class="row" <div class="col-sm-6">
-        <h1>{{venueObj.venueInfo.name}}</h1>
-        <h4>Rating: {{venueObj.venueRating}}</h4>
-    </div>
-    <div class="col-sm-6">
-        <h4>Address:</h4>
-    </div>
 
-    <div class="row">
-        <div class="col-sm-6">
-            <h1>{{venueObj.venueInfo.name}}</h1>
-            {{#if venueObj.venueRating}}
-            <h4>Rating: {{venueObj.venueRating}}</h4>
-            {{else}}
-            <h4>Rating: Not Yet Rated</h4>
-            {{/if}}
-            <h4>
-                <a href="{{venueObj.venueInfo.url}}" target="blank">{{venueObj.venueInfo.url}}</a>
-            </h4>
-            {{#if venueObj.venueInfo.facebook}}
-            <h4>
-                <a href="https://www.facebook.com/{{venueObj.venueInfo.facebook}}" target="blank">facebook.com/{{venueObj.venueInfo.facebook}}</a>
-            </h4>
-            {{/if}} {{#if venueObj.venueInfo.twitter}}
-            <h4>
-                <a href="https://www.twitter.com/{{venueObj.venueInfo.twitter}}" target="blank">twitter.com/{{venueObj.venueInfo.twitter}}</a>
-            </h4>
-            {{/if}} {{#if venueObj.venueInfo.instagram}}
-            <h4>
-                <a href="https://www.instagram.com/{{venueObj.venueInfo.instagram}}" target="blank">facebook.com/{{venueObj.venueInfo.instagram}}</a>
-            </h4>
-            {{/if}}
-        </div>
-
-        <div class="col-sm-6">
-            <h4>Address:</h4>
-            <h4>{{venueObj.venueInfo.address}}</h4>
-            <h4>{{venueObj.venueInfo.city}}, {{venueObj.venueInfo.state}} {{venueObj.venueInfo.zip}}</h4>
-        </div>
-    </div>
-</div>
-
-
-<!-- REVIEW/TIP DISPLAY -->
-<div class="container" id="reviewArea">
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card centered">
-                <h2>Reviews and Tips for {{venueObj.venueInfo.name}}</h2>
-                {{#each venueObj.reviewObj}}
-                <div class="row" id="reviewArea">
-                    <div class="container">
-                        <strong>{{this.name_author}}</strong>
-                        <br />
-                        <div>
-                            {{#each this.stars}} {{#if this.checked}} {{!--
-                            <span>1 </span> --}}
-                            <span>
-                                <i class="fas fa-star"></i>
-                            </span>
-                            {{else}} {{!--
-                            <span>2 </span> --}}
-                            <span>
-                                <i class="far fa-star"></i>
-                            </span>
-                            {{/if}} {{/each}}
-                        </div>
-                        {{!--
-                        <br /> Rating: {{this.rating_venue}} --}} {{this.category}}
-                        <br /> {{this.content}}
-                    </div>
-                </div>
-                <hr> {{/each}}
+    <!-- SELECTED VENUE DISPLAY -->
+    <div class="container" id="venueInfoArea">
+        <div class="row">
+            <div class="col-sm-6">
+                <h1>{{venueObj.venueInfo.name}}</h1>
+                {{#if venueObj.venueRating}}
+                <h4>Rating: {{venueObj.venueRating}}</h4>
+                {{else}}
+                <h4>Rating: Not Yet Rated</h4>
+                {{/if}}
+                <h4>
+                    <a href="{{venueObj.venueInfo.url}}" target="blank">{{venueObj.venueInfo.url}}</a>
+                </h4>
+                {{#if venueObj.venueInfo.facebook}}
+                <h4>
+                    <a href="https://www.facebook.com/{{venueObj.venueInfo.facebook}}" target="blank">facebook.com/{{venueObj.venueInfo.facebook}}</a>
+                </h4>
+                {{/if}} {{#if venueObj.venueInfo.twitter}}
+                <h4>
+                    <a href="https://www.twitter.com/{{venueObj.venueInfo.twitter}}" target="blank">twitter.com/{{venueObj.venueInfo.twitter}}</a>
+                </h4>
+                {{/if}} {{#if venueObj.venueInfo.instagram}}
+                <h4>
+                    <a href="https://www.instagram.com/{{venueObj.venueInfo.instagram}}" target="blank">facebook.com/{{venueObj.venueInfo.instagram}}</a>
+                </h4>
+                {{/if}}
             </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="card" id="writeReviewArea">
-                <h3>Write a Review</h3>
-                <form id="venueForm" method="post" action="/venues/{{venueObj.venueInfo.id}}">
 
-                    <input type="hidden" name="Venue Name" id="venueid_fm" value="{{venueObj.venueInfo.id}}">
-                    <label for="Authors Name">Author's Name:</label>
-                    <br />
-                    <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
-                    <br />
-                    <label for="category">Category:</label>
-                    <select name="category" id="category_fm">
-                        <option value="Review">Review</option>
-                        <option value="Tip">Tips</option>
-                    </select>
-                    <br />
-                    <label for="content">Content:</label>
-                    <br>
-                    <textarea class="form-control" rows="10" cols="30" id="content_fm"></textarea>
-                    <br />
-                    <label for="rating_venue">Venue Rating Stars!</label>
-                    <select name="rating_venue" id="rating_venue_fm">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
-                    <br />
-                    <button type="submit" id="formSubmit">Submit a Tip or Review</button>
-                </form>
+            <div class="col-sm-6">
+                <h4>Address:</h4>
+                <h4>{{venueObj.venueInfo.address}}</h4>
+                <h4>{{venueObj.venueInfo.city}}, {{venueObj.venueInfo.state}} {{venueObj.venueInfo.zip}}</h4>
             </div>
         </div>
     </div>
-</div>
 
 
-{{!--
-<div class="container" id="overallReviewArea">
-    <ul class="nav nav-pills">
-        <li class="nav-item">
-            <a class="nav-link active" data-toggle="pill" href="#reviews">Reviews</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="pill" href="#writeReview">Write a Review</a>
-        </li>
-    </ul>
-    <div class="tab-content">
-        <div id="reviews" class="container tab-pane active">
-            <br />
-            <div class="row text-center" id="reviewHeader">
-                <div class="col-sm-12">
-                    <div class="card centered">
-                        <h2>Reviews and Tips for {{venueObj.venueInfo.name}}</h2>
-                    </div>
-                </div>
-            </div> {{!--
-            <br> --}} {{#each reviewObj}}
-            <div class="row" id="reviewArea">
+    <!-- REVIEW/TIP DISPLAY -->
+    <div class="container" id="reviewArea">
+        <div class="row">
+            <div class="col-sm-6">
                 <div class="card centered">
-                    <div class="col-sm-3">
-                        {{reviewObj.name_author}}"
+                    <h2>Reviews and Tips for {{venueObj.venueInfo.name}}</h2>
+                    {{#each venueObj.reviewObj}}
+                    <div class="row" id="reviewArea">
+                        <div class="container">
+                            <strong>{{this.name_author}}</strong>
+                            <br />
+                            <div>
+                                {{#each this.stars}} {{#if this.checked}} {{!--
+                                <span>1 </span> --}}
+                                <span>
+                                    <i class="fas fa-star"></i>
+                                </span>
+                                {{else}} {{!--
+                                <span>2 </span> --}}
+                                <span>
+                                    <i class="far fa-star"></i>
+                                </span>
+                                {{/if}} {{/each}}
+                            </div>
+                            {{!--
+                            <br /> Rating: {{this.rating_venue}} --}} {{this.category}}
+                            <br /> {{this.content}}
+                        </div>
                     </div>
-                    <div class="col-sm-3">
-                        {{reviewObj.category}}
-                    </div>
-                    <div class="col-sm-3">
-                        {{reviewObj.content}}
-                    </div>
-                    <div class="col-sm-3">
-                        {{reviewObj.rating_venue}}
-                    </div>
+                    <hr> {{/each}}
                 </div>
             </div>
-            {{/each}}
+            <div class="col-sm-6">
+                <div class="card" id="writeReviewArea">
+                    <h3>Write a Review</h3>
+                    <form id="venueForm" method="post" action="/venues/{{venueObj.venueInfo.id}}">
 
-        </div>
-        <div id="writeReview" class="container tab-pane fade">
-            <br /> {{!--
-            <div class="row justify-content-center" id="writeReviewArea">
-                <div class="col-sm-12">
-                    <div class="card centered"> --}}
-                        <form id="venueForm" method="post">
-                            <h2>{{venueObj.venueInfo.name}}</h2>
-                            <input type="text" name="Venue Name" id="venueid_fm" value="{{venueId}}" placeholder="{{venueId}}">
-                            <br>
-                            <br>
-                            <label for="Authors Name">Author's Name:</label>
-                            <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
-                            <br>
-                            <br>
-                            <label for="category">Category:</label>
-                            <select name="category" id="category_fm">
-                                <option value="Review">Review</option>
-                                <option value="Tip">Tips</option>
-                            </select>
-                            <br>
-                            <br>
-                            <label for="content">Content:</label>
-                            <br>
-                            <textarea class="form-control" rows="10" cols="30" id="content_fm"></textarea>
-                            <br>
-                            <br>
-                            <label for="rating_venue">Venue Rating Stars!</label>
-                            <select name="rating_venue" id="rating_venue_fm">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                            </select>
-                            <br>
-                            <br>
-
-                            <button type="submit" id="formSubmit">Submit a Tip or Review</button>
-                        </form>
-                        {{!-- </div>
+                        <input type="hidden" name="Venue Name" id="venueid_fm" value="{{venueObj.venueInfo.id}}">
+                        <label for="Authors Name">Author's Name:</label>
+                        <br />
+                        <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
+                        <br />
+                        <label for="category">Category:</label>
+                        <select name="category" id="category_fm">
+                            <option value="Review">Review</option>
+                            <option value="Tip">Tips</option>
+                        </select>
+                        <br />
+                        <label for="content">Content:</label>
+                        <br>
+                        <textarea class="form-control" rows="10" cols="30" id="content_fm"></textarea>
+                        <br />
+                        <label for="rating_venue">Venue Rating Stars!</label>
+                        <select name="rating_venue" id="rating_venue_fm">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                        <br />
+                        <button type="submit" id="formSubmit">Submit a Tip or Review</button>
+                    </form>
                 </div>
-            </div> --}}
+            </div>
         </div>
     </div>
-</div> --}} {{!--
-<div class="row text-center" id="reviewHeader">
-    <div class="col-sm-12">
-        <div class="card centered">
-            <h2>Reviews and Tips for {{venueObj.venueInfo.name}}</h2>
-        </div>
-    </div>
-    <br> {{#each reviewObj}}
-    <div class="row" id="reviewArea">
-        <div class="card centered">
+</div>
 
-            <div class="col-sm-3">
-                {{reviewObj.name_author}}"
-
-            </div>
-
-            <div class="col-sm-3">
-                {{reviewObj.category}}
-
-            </div>
-
-            <div class="col-sm-3">
-                {{reviewObj.content}}
-            </div>
-            <div class="col-sm-3">
-                {{reviewObj.rating_venue}}
-            </div>
-            {{/each}}
-        </div>
-    </div> --}} {{!--
-    <div class="row justify-content-center">
-        <div class="col-sm-10">
-            <div class="card centered">
-
-                <form id="venueForm" method="post">
-
-                    <h2>{{venueObj.venueInfo.name}}</h2>
-                    <input type="text" name="Venue Name" id="venueid_fm" value="{{venueId}}" placeholder="{{venueId}}">
-
-                    <!--venue id will come from ajax call-->
-
-                    <br>
-                    <br>
-
-                    <label for="Authors Name">Author's Name:</label>
-                    <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
-                    <br>
-                    <br>
-
-                    <label for="category">Category:</label>
-                    <select name="category" id="category_fm">
-                        <option value="Review">Review</option>
-                        <option value="Tip">Tips</option>
-                    </select>
-                    <br>
-                    <br>
-                    <label for="content">Content:</label>
-                    <br>
-                    <textarea class="form-control" rows="10" cols="30" id="content_fm">
-        write content in here
-        </textarea>
-                    <br>
-                    <br>
-                    <label for="rating_venue">Venue Rating Stars!</label>
-                    <select name="rating_venue" id="rating_venue_fm">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
-                    <br>
-                    <br>
-
-                    <button type="submit" id="formSubmit">Submit a Tip or Review</button>
-                </form>
-            </div>
-        </div>
-    </div> --}}
-    <!-- Custom Script -->
-    <script src="../js/form.js" type="text/javascript"></script>
