--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,10 +16,10 @@
 
  #mainCard  {
      width: 100%;
-     height: 100%;
+     /* height: 100%; */
     font-family: 'Amatic SC', cursive;
     font-style: bold;
-
+    background-color: white;
  }
 
  #mainPageHeaderFont {
@@ -58,12 +58,9 @@ th {
      text-align: center;
  }
 
- #searchBar  {
-    height: 200px;
-}
 
 #newSearchBar  {
-    height:200px;
+    max-height:200px;
 }
 
 #newSearchTitle  {
@@ -88,12 +85,12 @@ label  {
  }
 
  #newSearchSubmit { 
-    width:200px !important;
-    height: 55px; 
-    margin-left: 15px;  
+    width: 200px !important;
+    height: 100px;
+    margin-left: 15px; 
+    margin-bottom: 15px; 
     font-family: 'Amatic SC', cursive;
-    font-style: bold;
-    font-size: 2rem;
+    font-size: 3rem;
     text-decoration: center;
  }
 
@@ -155,7 +152,7 @@ label  {
     border-left: 10px, color, black; 
  }
 
- @media screen and (max-width: 600px) {
+ @media only screen and (max-width: 600px) {
     
     
     #mainPageHeaderFont {
@@ -170,6 +167,10 @@ label  {
         font-style: bolder; 
         
      }   
+
+     #city, #state {
+         display: block;
+     }
 
      .card.centered {
 
@@ -295,6 +296,17 @@ label  {
     margin-top: 20px;
     margin-bottom: 0px;
  }
+
+ #city, #state {
+     display: inline;
+     max-width: 75%;
+     margin: 10px
+ }
+
+ #venue {
+     max-width: 90%
+ }
+
 /*css for the autocomplete*/
 
 input {
@@ -303,6 +315,7 @@ input {
   padding: 10px;
   font-size: 16px;
 }
+
 input[type=text] {
   background-color: #f1f1f1;
   width: 100%;
