--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,33 +6,39 @@
             </h1>
         </div>
     </div>
-    <div class="d-flex justify-content-center text-black" id="searchBar">
-        <div class="card" id="mainCard">
-            <div class="card-body">
-                <h2 class="card-title">
-                    <strong>Search Location (City, State, Venue)</strong></h2>
-
-                <form class="form-inline" autocomplete="off" action="/venuelist" method="post">
-                    <div class="autocomplete form-inline" style="width:300px;">
-                    <label for="city">City:</label>
-                    <input type="search" class="form-control" name="city" id="city">
-                    </div>
-                    <div class="autocomplete form-inline" style="width:300px;">
-                    <label for="state">State:</label>
-                    <input type="search" class="form-control" name="state" id="state">
-                    </div>
-                    <label for="venue">Venue:</label>
-                    <input type="search" class="form-control" name="venue" id="venue">
-                    <button type="submit" class="btn btn-secondary btn-lg" id="newSearchSubmit" 
-                    type="submit">
-                    <strong>SUBMIT SEARCH</strong>
+        <div class="container-fluid" id="mainCard">
+                <center><h2 class="card-title">
+                    <strong>Search Venue</strong>
+                </h2></center>
+            {{!--
+            <form class="form-inline" autocomplete="off" action="/venuelist" method="post"> --}}
+                <center>
+                    <form action="venuelist" method="POST">
+                        {{!--
+                        <div class="autocomplete form-inline" style="width:300px;"> --}}
+                            <div class="form-group row">
+                                <div class="col-md-6">
+                            <label for="city">City:</label>
+                            <input type="search" class="form-control" name="city" id="city">
+                            </div> {{!-- </div> --}} {{!--
+                        <div class="autocomplete form-inline" style="width:300px;"> --}}
+                            <div class="col-md-6">
+                            <label for="state">State:</label>
+                            <input type="search" class="form-control" name="state" id="state">
+                            </div>
+                            </div> {{!-- </div> --}}
+                        <div class="form-group row">
+                        <label for="venue" class="col-md-2">Venue:</label>
+                        <div class="col-md-10">
+                        <input type="search" class="form-control" name="venue" id="venue">
+                        </div>
+                        </div>
+                        <button class="btn btn-secondary btn-lg" id="newSearchSubmit" type="submit">
+                            SUBMIT SEARCH
                         </button>
-                    
-                </form>
-               
-            </div>
+                    </form>
+                </center>
         </div>
-    </div>
 </div>
 
-<script src="../js/form.js" type="text/javascript"></script>
+{{!-- <script src="../js/form.js" type="text/javascript"></script> --}}
