--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,39 +6,34 @@
             </h1>
         </div>
     </div>
-        <div class="container-fluid" id="mainCard">
-                <center><h2 class="card-title">
-                    <strong>Search Venue</strong>
-                </h2></center>
-            {{!--
-            <form class="form-inline" autocomplete="off" action="/venuelist" method="post"> --}}
-                <center>
-                    <form action="venuelist" method="POST">
-                        {{!--
-                        <div class="autocomplete form-inline" style="width:300px;"> --}}
-                            <div class="form-group row">
-                                <div class="col-md-6">
-                            <label for="city">City:</label>
-                            <input type="search" class="form-control" name="city" id="city">
-                            </div> {{!-- </div> --}} {{!--
-                        <div class="autocomplete form-inline" style="width:300px;"> --}}
-                            <div class="col-md-6">
-                            <label for="state">State:</label>
-                            <input type="search" class="form-control" name="state" id="state">
-                            </div>
-                            </div> {{!-- </div> --}}
-                        <div class="form-group row">
-                        <label for="venue" class="col-md-2">Venue:</label>
-                        <div class="col-md-10">
+    <div class="container-fluid" id="mainCard">
+        <center>
+            <h2 class="card-title">
+                <strong>Search Venue</strong>
+            </h2>
+        </center>
+        <center>
+            <form action="venuelist" method="POST">
+                <div class="form-group row">
+                    <div class="col-md-6">
+                        <label for="city">City:</label>
+                        <input type="search" class="form-control" name="city" id="city">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="state">State:</label>
+                        <input type="search" class="form-control" name="state" id="state">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="venue" class="col-md-2">Venue:</label>
+                    <div class="col-md-10">
                         <input type="search" class="form-control" name="venue" id="venue">
-                        </div>
-                        </div>
-                        <button class="btn btn-secondary btn-lg" id="newSearchSubmit" type="submit">
-                            SUBMIT SEARCH
-                        </button>
-                    </form>
-                </center>
-        </div>
+                    </div>
+                </div>
+                <button class="btn btn-secondary btn-lg" id="newSearchSubmit" type="submit">
+                    SUBMIT SEARCH
+                </button>
+            </form>
+        </center>
+    </div>
 </div>
-
-{{!-- <script src="../js/form.js" type="text/javascript"></script> --}}
